# fgtools

./: README.md  edit-stg.py  install.py  pyproject.toml  setup.cfg
aircraft/: javaprop2jsbcpct.py  vsphist2jsbtable.py  vspstab2jsbtable.py
fgtools/: __init__.py  aptdat.py  btg.py  dsf2stg_lookup.py  fgelev.py
fgtools/aircraft/: javaprop2jsbcpct.py  vsphist2jsbtable.py  vspstab2jsbtable.py
fgtools/geo/: __init__.py  coord.py  rectangle.py
fgtools/math/: __init__.py  coord.py  rectangle.py
fgtools/misc/: coord_converter.py  scrape_emanualonline.py  scrape_scribd.py  tabletool.py
fgtools/scenery/: aptdat2airportsxml.py  create_day_night_xml.py  dsftxt2stg.py  edit_stg.py  fix_aptdat_icaos.py  genws20.py  osm2aptdat.py  osmconf.ini  pull_xplane_aptdat.py  tg_priorities.txt  ungap-btg.py  ungap_btg.py
fgtools/utils/: __init__.py  binary.py  constants.py  files.py  interpolator.py
misc/: scrape-emanualonline-pdf.py  scrape-scribd.py  tabletool.py
scenery/: aptdat2airportsxml.py  coord_convert.py  create-day-night-xml.py  dsftxt2stg.py  edit-stg.py  fix-aptdat-icaos.py  genws20.py  osm2aptdat.py  process-elevations.py  process-shapefiles.py  pull_xplane_aptdat.py  shapefiles.py  stg2ufo.py
utils/: __init__.py  constants.py  files.py  geo.py  interpolator.py  unit_convert.py
