[metadata]
name = fgtools
version = 2.0.0
description = Tools for FlightGear scenery generation and aircraft development

[options]
packages = find:
install_requires =
	scipy
	plum-dispatch

[options.entry_points]
console_scripts = 
	javaprop2jsbcpct = fgtools.aircraft.javaprop2jsbcpct:main
	vsphist2jsbtable = fgtools.aircraft.vsphist2jsbtable:main
	vspstab2jsbtable = fgtools.aircraft.vspstab2jsbtable:main
	coord-converter = fgtools.misc.coord_converter:main
	scrape-emanualonline = fgtools.misc.scrape_emanualonline:main
	scrape-scribd = fgtools.misc.scrape_scribd:main
	tabletool = fgtools.misc.tabletool:main
	aptdat2airportsxml = fgtools.scenery.aptdat2airportsxml:main
	create-day-night-xml = fgtools.scenery.create_day_night_xml:main
	dsftxt2stg = fgtools.scenery.dsftxt2stg:main
	edit-stg = fgtools.scenery.edit_stg:main
	fix-aptdat-icaos = fgtools.scenery.fix_aptdat_icaos:main
	genws20 = fgtools.scenery.genws20:main
	osm2aptdat = fgtools.scenery.osm2aptdat:main
	pull-xplane-aptdat = fgtools.scenery.pull_xplane_aptdat:main
	stg2ufo = fgtools.scenery.stg2ufo:main
	ungap-btg = fgtools.scenery.ungap_btg:main
