[metadata]
name = fgtools
version = 2.1.5
description = Tools for FlightGear scenery generation and aircraft development
author = TheFGFSEagle
author_email = thefgfseagle@gmail.com
long_description_content_type = text/markdown
long_description = file: README.md
keywords = flightgear
license = GPLv3
classifiers =
	Programming Language :: Python :: 3
url = https://github.com/TheFGFSEagle/fgtools

project_urls = 
	Homepage = https://github.com/TheFGFSEagle/fgtools
	Bug Tracker = https://github.com/TheFGFSEagle/fgtools/issues

[options]
packages = find:
install_requires =
	scipy
	plum-dispatch
	tqdm
	importlib-resources; python_version < "3.9"
include_package_data = True

[options.entry_points]
console_scripts = 
	javaprop2jsbcpct = fgtools.aircraft.javaprop2jsbcpct:main
	vsphist2jsbtable = fgtools.aircraft.vsphist2jsbtable:main
	vspstab2jsbtable = fgtools.aircraft.vspstab2jsbtable:main
	coord-converter = fgtools.misc.coord_converter:main
	scrape-emanualonline = fgtools.misc.scrape_emanualonline:main
	scrape-scribd = fgtools.misc.scrape_scribd:main
	tabletool = fgtools.misc.tabletool:main
	aptdat2airportsxml = fgtools.scenery.aptdat2airportsxml:main
	create-day-night-xml = fgtools.scenery.create_day_night_xml:main
	dsftxt2stg = fgtools.scenery.dsftxt2stg:main
	edit-stg = fgtools.scenery.edit_stg:main
	fix-aptdat-icaos = fgtools.scenery.fix_aptdat_icaos:main
	genws20 = fgtools.scenery.genws20:main
	osm2aptdat = fgtools.scenery.osm2aptdat:main
	pull-xplane-aptdat = fgtools.scenery.pull_xplane_aptdat:main
	stg2ufo = fgtools.scenery.stg2ufo:main
	ungap-btg = fgtools.scenery.ungap_btg:main

[options.package_data]
* = 
	osmconf.ini
